[gd_scene load_steps=3 format=3 uid="uid://cdgnnaqipwaq7"]

[ext_resource type="Script" path="res://scripts/screen/SettingsWindow.gd" id="1_jhqbo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvs5v"]
bg_color = Color(0.219608, 0.211765, 0.207843, 1)

[node name="Settings" type="Window"]
initial_position = 2
size = Vector2i(600, 400)
borderless = true
popup_window = true
min_size = Vector2i(500, 400)
script = ExtResource("1_jhqbo")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="General" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pvs5v")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/General"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="General" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="LanguageSelectionGroup" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/LanguageSelectionGroup"]
layout_mode = 2
size_flags_horizontal = 8
text = "Langue de l'interface"

[node name="LanguageOptionSelectInput" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/LanguageSelectionGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BasePathDirGroup" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/BasePathDirGroup"]
layout_mode = 2
size_flags_horizontal = 8
text = "Répertoire par défaut"

[node name="BasePathDir" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/BasePathDirGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="SelectDirButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/BasePathDirGroup"]
layout_mode = 2
text = " [...] "

[node name="API" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/API"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="APIContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer"]
layout_mode = 2

[node name="OpenApiGroup" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/OpenApiGroup"]
layout_mode = 2
size_flags_horizontal = 8
text = "OpenAPI Token"

[node name="OpenApiTokenInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/OpenApiGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "VOTRE CLE D'API"

[node name="DirectusUrlGroup" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/DirectusUrlGroup"]
layout_mode = 2
size_flags_horizontal = 8
text = "Directus URL "

[node name="DirectusURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/DirectusUrlGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "URL DE VOTRE DIRECTUS"

[node name="DirectusApiGroup" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/DirectusApiGroup"]
layout_mode = 2
size_flags_horizontal = 8
text = "Directus API token"

[node name="DirectusApiTokenInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/API/MarginContainer/APIContainer/DirectusApiGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "VOTRE TOKEN DIRECTUS"

[node name="ActionLayout" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ActionLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sauvegarder"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ActionLayout"]
layout_mode = 2
text = "Annuler"

[node name="SelectDirFileDiaglog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(454, 400)
min_size = Vector2i(400, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/LanguageSelectionGroup/LanguageOptionSelectInput" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/General/MarginContainer/General/BasePathDirGroup/SelectDirButton" to="." method="_on_select_dir_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionLayout/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionLayout/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="canceled" from="SelectDirFileDiaglog" to="." method="_on_select_dir_file_diaglog_canceled"]
[connection signal="confirmed" from="SelectDirFileDiaglog" to="." method="_on_select_dir_file_diaglog_confirmed"]
[connection signal="dir_selected" from="SelectDirFileDiaglog" to="." method="_on_select_dir_file_diaglog_dir_selected"]
